# ParaPR

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  LICENSE  Makefile  README.md  WORKFLOW.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: ci.yml
scripts/: spawn-sessions.sh  worktree-setup.sh
src/: server.py
