[tool.poetry]
name = "parapr"
version = "0.1.0"
description = "Parallel PR orchestrator for Claude Code sessions"
authors = ["Cleary AI"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0.0"
openai = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
